syntax = "proto3";

option csharp_namespace = "GrpcServiceB";

package greet;

service Greeter {
  rpc ProcessMessage (MessageRequest) returns (MessageReply);
}

message MessageRequest {  
  string name = 1;
  int32 priority = 2;
}

message MessageReply {
  string message = 1;
}
